<resources>
    <string name="app_name">DummyDictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_button">Agregar</string>
    <string name="add_word">Add Word</string>
    <string name="hint_palabra">Word</string>
    <string name="hint_definition">Definition</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="sign_in_login">Sign In</string>
</resources>